<resources>
    <string name="app_name">party-lojo-game</string>
    <string name="title">Party Lojo Game</string>
    <string name="subtitle">Enjoy Responsibly Drink</string>
    <string name="about">Un juego de infolojo</string>
    <string name="exit_app">Estas seguro de que desea dejar la aplicación</string>
    <string name="exit_app_title">Salir de INFOLOJO PARTY GAME</string>
    <string name="cancel_config">¿Estas seguro de que deseas volver a atras?\nPerderas todo el progreso</string>
    <string name="on_play_back">Si vuelves a atras tendrás que volver a configurar los/as jugadores/as</string>
    <string name="important_config">Ojo !!</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="dialog_no">Mejor que no</string>
    <string name="dialog_si">Dale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">JUGAR</string>
    <string name="options">Opciones</string>
    <string name="configure_user">Configura tu personaje</string>
    <string name="configure_all_users">Configura los personajes</string>
    <string name="configure_user__how_to">Para configurar tu personaje desliza hacia la derecha y pulsa el boto "Toca para comenzar el juego"</string>
    <string name="configure_user__all_users">Para configurar los personajes ve deslizando y pasando el teléfono. Cuando lleges al final el último jugador debe pulsar el botón "Toca para comenzar el juego"</string>
    <string name="config_player_img_label">Toca para cambiar el personaje</string>
    <string name="config_player_name_txt">Introduce el nombre de tu jugador</string>
    <string name="config_player_swipe_to_continue">Desliza para comenzar</string>
    <string name="toca_para_seguir">Desliza y pasa al siguiente jugador</string>
    <string name="toca_para_comenzar_el_juego">Toca para comenzar el juego</string>
    <string name="elige_una_foto">Elige una foto</string>
    <string name="que_empieze_la_fiesta">Que empieze la fiesta</string>
    <string name="verdad_o_reto">Verdad o reto</string>
    <string name="yo_nunca">Yo nunca</string>
    <string name="bebe_quien">Bebe quien</string>
    <string name="next_player">Siguiente jugador</string>

    <!-- region onPlayFragment -->
    <string name="bebe_quien_label_title">Bebe quien …</string>
    <string name="yo_nunca_label_title">Yo nunca …</string>
    <string name="title_error">Error</string>
    <string name="go_back">volver a atrás</string>
    <string name="something_was_wrong">Algo ha ido mal</string>
    <string name="empty">""</string>
    <!-- endregion onPlayFragment -->

    <!-- region menu -->
    <string name="add_new_questions">Añade una nueva pregunta</string>
    <string name="add_your_own_images">Añade tus propias imágenes</string>
    <string name="edit_your_questions">Edita tus preguntas</string>
    <string name="input_player_name">Introduce el nombre de tu personaje</string>
    <string name="c_antos_jugadores_sois">¿Cúantos jugadores sois?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_11">11</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="select_type_of_question">Seleccione un tipo</string>
    <string name="select_a_type">Seleccione un tipo *</string>
    <string name="add_your_question">Añade tu pregunta *</string>
    <string name="save_question">Guardar</string>
    <!-- endregion menu -->

    <!-- region addQuestion -->
    <string-array name="type_question_array">
        <item>@string/yo_nunca</item>
        <item>@string/bebe_quien</item>
    </string-array>

    <string name="content_error">Error de contenido</string>
    <string name="type_error">El tipo no es valido</string>
    <string name="content_and_type_error">El error y el tipo no es valido</string>
    <string name="added_to_database_sucsses">La pregunta se ha guardado correctamente</string>
    <string name="content_already_saved">"ya existe en la base de datos"</string>
    <!-- endregion addQuestion -->

    <!-- region editQuestion -->
    <string name="edit_question_action">¿Qué quieres hacer?</string>
    <string name="edit">Editar</string>
    <string name="remove">Eliminar</string>
    <string name="removed_success">La pregunta ha sido eliminada correctamente</string>
    <string name="removed_fail">ha habido un error al eliminar la preguntar</string>
    <string name="edit_your_question">Edita tu pregunta</string>
    <string name="edit_your_question_hint">Introduzca aquí el nuevo texto de su pregunta</string>
    <string name="edit_your_question_success">La pregunta se ha guardado correctamente</string>
    <string name="edit_your_question_fail">La pregunta no se ha guradado correctamente</string>
    <!-- endregion editQuestion -->
</resources>
