<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/dp10"
    tools:context=".ui.fragments.HowManyPLayersFragment">

    <TextView
        android:id="@+id/fragment_how_many_players__title"
        style="@style/titleText.center"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_antos_jugadores_sois"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__one"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__five"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__title">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_1" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__two"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__six"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__three"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__one"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__title">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_2" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__three"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__seven"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__four"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__two"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__title">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_3" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__four"
        style="@style/CardItemSelectNumberOfPlayers"
        android:layout_marginEnd="@dimen/dp0"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__three"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__title">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_4" />

    </androidx.cardview.widget.CardView>

    <!--third row-->

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__nine"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__ten"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__five">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_9" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__ten"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__eleven"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__nine"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__six">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_10" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__eleven"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__twelve"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__ten"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__seven">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_11" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__twelve"
        style="@style/CardItemSelectNumberOfPlayers"
        android:layout_marginEnd="@dimen/dp0"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__eleven"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__eight">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_12" />

    </androidx.cardview.widget.CardView>

    <!--second row-->
    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__five"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__nine"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__six"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__one">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_5" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__six"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__ten"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__seven"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__five"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__two">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_6" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__seven"
        style="@style/CardItemSelectNumberOfPlayers"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__eleven"
        app:layout_constraintEnd_toStartOf="@id/fragment_how_many_players__eight"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__six"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__three">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_7" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_how_many_players__eight"
        style="@style/CardItemSelectNumberOfPlayers"
        android:layout_marginEnd="@dimen/dp0"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_how_many_players__twelve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_how_many_players__seven"
        app:layout_constraintTop_toBottomOf="@id/fragment_how_many_players__four">

        <TextView
            style="@style/itemsSelectNumberOfPLayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_8" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
