<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/dp20">



    <TextView
        android:id="@+id/textErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_error"
        android:gravity="center|top"
        android:textColor="@color/white"
        android:textSize="@dimen/sp50"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp120"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/textErrorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/something_was_wrong"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        app:layout_constraintTop_toBottomOf="@id/textErrorTitle"
        app:layout_constraintStart_toStartOf="@id/textErrorTitle"
        android:layout_marginStart="@dimen/dp20"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/go_back_btn"
        android:layout_width="@dimen/dp60"
        android:layout_height="@dimen/dp60"
        app:cardCornerRadius="@dimen/dp50"
        android:backgroundTint="@color/primary_slow_purple"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/dp150"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_go_back"
            android:layout_gravity="center"
            android:contentDescription="@string/go_back" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>