<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:background="@color/black"
    android:padding="@dimen/dp10"

    tools:context=".ui.fragments.ConfigPlayerObjectFragment">

    <TextView
        android:id="@+id/config_player_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_user"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"/>



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/config_player__img"
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp150"
        android:layout_marginTop="@dimen/dp50"
        app:layout_constraintTop_toBottomOf="@id/config_player_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/primary_slow_purple"
        android:src="@mipmap/user8"/>

    <TextView
        android:id="@+id/config_player__imagen_lavel"
        android:layout_width="@dimen/dp300"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_slow_purple"
        android:text="@string/config_player_img_label"
        android:gravity="center"
        android:textSize="@dimen/sp20"
        app:layout_constraintTop_toBottomOf="@id/config_player__img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/config_player__player_name_txt"
        android:layout_width="@dimen/dp300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp80"
        android:background="@color/primary_slow_purple"
        android:hint="@string/config_player_name_txt"
        android:maxLines="1"
        android:padding="5dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/config_player__imagen_lavel"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="@dimen/dp60"
        android:layout_height="@dimen/dp60"
        android:background="@drawable/button_border_rounds"
        android:backgroundTint="@color/primary_slow_purple"
        android:src="@drawable/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/config_player__next_label" />

    <TextView
        android:id="@+id/config_player__next_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toca_para_seguir"
        android:textColor="@color/primary_slow_purple"
        android:textStyle="bold"
        android:textSize="@dimen/sp20"
        android:layout_marginBottom="@dimen/dp30"
        app:layout_constraintBottom_toBottomOf="parent"

        android:gravity="center"/>

    <!--todo:change with linear layout-->

</androidx.constraintlayout.widget.ConstraintLayout>